force-app/main/default/objects/ampi__Project_Indicator__c/ampi__Project_Indicator__c.object-meta.xml
<CustomObject>
    <description>Junction linking a catalog indicator to a project</description>
    <label>Project Indicator</label>
    <nameField>
        <displayFormat>I-{00000}</displayFormat>
        <label>Project Indicator ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Indicators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>