force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Active__c.field-meta.xml
<CustomField>
    <fullName>ampi__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox field to activate / deactivate a Project Indicator record in a Project. If marked as TRUE, the Project Indicator record will display in the Selected Indicators table on ManageIndicators. If marked as FALSE, the Project Indicator record will display in the Deactivated Indicators table on ManageIndicators, and future Project Indicator Reporting Period records are deleted.</description>
    <inlineHelpText>This is checked by default to indicate the Project Indicator is active. To deactivate and no longer track data for this Project Indicator, uncheck the box.</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>