force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Aggregate_Setting__c.field-meta.xml
<CustomField>
    <fullName>ampi__Aggregate_Setting__c</fullName>
    <description>Long text to store the SOQL aggregation setting for an aggregated project indicator. This is populated by the Aggregation Setting popup on ManageIndicators.</description>
    <label>Aggregation Setting</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>