force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Aim__c.field-meta.xml
<CustomField>
    <fullName>ampi__Aim__c</fullName>
    <description>This formula field copies the aim from parent indicator.</description>
    <formula>TEXT(ampi__Catalog_Indicator__r.ampi__Aim__c)</formula>
    <label>Aim</label>
    <type>Text</type>
</CustomField>