force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Aim_Icon__c.field-meta.xml
<CustomField>
    <fullName>ampi__Aim_Icon__c</fullName>
    <description>This formula field copies the aim icon from parent indicator.</description>
    <formula>IF(ampi__Aim__c = &apos;Increase&apos; , &apos;vi-arrow-circle-up&apos; , IF(ampi__Aim__c = &apos;Decrease&apos; , &apos;vi-arrow-circle-down&apos; , &apos;&apos; ))&amp;&quot;#&quot;&amp;ampi__Aim__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aim</label>
    <type>Text</type>
</CustomField>