force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>ampi__Apex_Job_Id__c</fullName>
    <description>Text field to store the apex job id of the Aggregation or Calculation batch. This field determines the display of the refresh icon on ManageIndicators.</description>
    <label>Apex Job Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>