force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Baseline__c.field-meta.xml
<CustomField>
    <fullName>ampi__Baseline__c</fullName>
    <description>State/Value of the indicator at the start of the project. Only used for numeric (currency, number, percent) project indicators.</description>
    <label>Baseline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>