force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Calculate_Total__c.field-meta.xml
<CustomField>
    <fullName>ampi__Calculate_Total__c</fullName>
    <description>Picklist field to specify if the results and targets for project indicator should be summed total for all reporting periods and geographic areas in result to date/ total target field on project indicator record. The value in this field determines the display of summed columns/rows on Set Targets and AddResults.</description>
    <label>Calculate Total</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sum Total</fullName>
            </value>
            <value>
                <fullName>Don&apos;t Sum Total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>