force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Calculation_Formula__c.field-meta.xml
<CustomField>
    <fullName>ampi__Calculation_Formula__c</fullName>
    <description>Long text field to store the formula created by the user in the calculation formula pop-up, using the Project Indicator Definitions. This is populated by the Calculation Formula popup.</description>
    <label>Calculation Formula</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>