force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Calculation_Formula_HTML__c.field-meta.xml
<CustomField>
    <fullName>ampi__Calculation_Formula_HTML__c</fullName>
    <description>Long text area field to store the HTML version of the calculation formula that is displayed in the Edit Calculation Formula popup. This is populated by the Calculation Formula popup.</description>
    <label>Calculation Formula HTML</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>