force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Calculation_Formula_Id__c.field-meta.xml
<CustomField>
    <fullName>ampi__Calculation_Formula_Id__c</fullName>
    <description>Long text area to store the formula created by the user in the calculation formula pop-up, using the Project Indicator Ids. This is populated by the Calculation Formula popup. This field determines how the Calculation Batch runs.</description>
    <label>Calculation Formula Id</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>