force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Calculation_Formula_Language_1__c.field-meta.xml
<CustomField>
    <fullName>ampi__Calculation_Formula_Language_1__c</fullName>
    <description>Primary translated version of Calculation_Formula__c.</description>
    <label>Calculation Formula Language 1</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>