force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Calculation_Formula_Language_2__c.field-meta.xml
<CustomField>
    <fullName>ampi__Calculation_Formula_Language_2__c</fullName>
    <description>Secondary translated version of Calculation_Formula__c.</description>
    <label>Calculation Formula Language 2</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>