force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Calculation_Formula_Language_3__c.field-meta.xml
<CustomField>
    <fullName>ampi__Calculation_Formula_Language_3__c</fullName>
    <description>Tertiary translated version of Calculation_Formula__c.</description>
    <label>Calculation Formula Language 3</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>