force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Catalog_Indicator__c.field-meta.xml
<CustomField>
    <fullName>ampi__Catalog_Indicator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to specify the parent catalog indicator. This field must be populated for several of the formula fields on Project Indicator to print correctly (e.g. Data Type).</description>
    <label>Related Indicator</label>
    <referenceTo>ampi__Indicator__c</referenceTo>
    <relationshipLabel>Project Indicators</relationshipLabel>
    <relationshipName>Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>