force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Cross_Disaggregation_by_Sex__c.field-meta.xml
<CustomField>
    <fullName>ampi__Cross_Disaggregation_by_Sex__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to specify it the targets/ results for this project indicator are to be disaggregated by sex. If marked as TRUE, this Indicator will display with three columns to enter Result data.</description>
    <label>Cross-Disaggregation by Sex</label>
    <type>Checkbox</type>
</CustomField>