force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Cumulative__c.field-meta.xml
<CustomField>
    <fullName>ampi__Cumulative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, indicates that the data is collected cumulatively, i.e. the results to date and targets to date for the project indicator are reported from the most recent reporting period, instead of summed across all reporting periods.</description>
    <inlineHelpText>If this field is checked, it indicates that data is reported cumulatively for this Project Indicator so the last reported data is the accumulated target or result to date, covering all time periods.</inlineHelpText>
    <label>Cumulative?</label>
    <type>Checkbox</type>
</CustomField>