force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Data_Source__c.field-meta.xml
<CustomField>
    <fullName>ampi__Data_Source__c</fullName>
    <description>Long text field to specify the data source to be used while measuring this project indicator.</description>
    <label>Data Source</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>