force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Data_Source_Language_2__c.field-meta.xml
<CustomField>
    <fullName>ampi__Data_Source_Language_2__c</fullName>
    <description>Secondary translated version of Data_Source__c.</description>
    <label>Data Source Language 2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>