force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Data_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__Data_Type__c</fullName>
    <description>This formula field copies data type from parent indicator.</description>
    <formula>TEXT(ampi__Catalog_Indicator__r.ampi__Data_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Type</label>
    <type>Text</type>
</CustomField>