force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Data_Type_Icon__c.field-meta.xml
<CustomField>
    <fullName>ampi__Data_Type_Icon__c</fullName>
    <description>This field is used to pull the Font Awesome icon associated with a given data type.</description>
    <formula>IF( ampi__Data_Type__c  = &apos;Number&apos;, &apos;vi-number-value&apos; , IF(  ampi__Data_Type__c  = &apos;Currency&apos; , &apos;vi-money&apos;, IF( ampi__Data_Type__c  = &apos;Percent&apos; , &apos;vi-percentage-value&apos; , IF( ampi__Data_Type__c  = &apos;Qualitative&apos; ,&apos;vi-file-text-o&apos; , IF( ampi__Data_Type__c  = &apos;Milestone&apos; , &apos;vi-map-signs&apos; ,&apos;&apos; )))))&amp;&quot;#&quot;&amp;ampi__Data_Type__c</formula>
    <label>Data Type</label>
    <type>Text</type>
</CustomField>