force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Description__c.field-meta.xml
<CustomField>
    <fullName>ampi__Description__c</fullName>
    <description>Text field to define the project indicator. This is populated by ManageIndicators.</description>
    <label>Indicator Definition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>