force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Description_Language_3__c.field-meta.xml
<CustomField>
    <fullName>ampi__Description_Language_3__c</fullName>
    <description>Tertiary translated version of Description__c. This value is printed in Description_Translated__c when USER_LANGUAGE_CODE = 3.</description>
    <label>Indicator Definition Language 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>