force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Disaggregation_Group__c.field-meta.xml
<CustomField>
    <fullName>ampi__Disaggregation_Group__c</fullName>
    <description>This field will be populated by a trigger and will contain the parent indicator&apos;s associated Disaggregation Group (based on Disaggregated Indicator junction) at the time of Project Indicator creation.</description>
    <label>Disaggregation Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>