force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Disaggregation_Group_Language_3__c.field-meta.xml
<CustomField>
    <fullName>ampi__Disaggregation_Group_Language_3__c</fullName>
    <description>Tertiary translated version of Disaggregation_Group__c. This value is printed in Disaggregation_Group_Translated__c  when USER_LANGUAGE_CODE = 3.</description>
    <label>Disaggregation Group Language 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>