force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Exclude_From_IATI__c.field-meta.xml
<CustomField>
    <fullName>ampi__Exclude_From_IATI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if this project indicator should be excluded while reporting to IATI. If this is marked as TRUE, then this project indicator and its related results data will not be printed into the IATI Activity XML.</description>
    <inlineHelpText>Check this box if this information should be excluded from IATI</inlineHelpText>
    <label>Exclude from IATI</label>
    <type>Checkbox</type>
</CustomField>