force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__External_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__External_Code__c</fullName>
    <description>Formula field to pull the External Code from the parent Catalog Indicator onto the current Project Indicator record.</description>
    <formula>ampi__Catalog_Indicator__r.ampi__External_Code__c</formula>
    <label>External Code</label>
    <type>Text</type>
</CustomField>