force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Geographic_Area_Text__c.field-meta.xml
<CustomField>
    <fullName>ampi__Geographic_Area_Text__c</fullName>
    <description>Concatenated list of all Geographic Areas that are associated with this Project Indicator, via the Project Indicator Geographic Area junction. The triggers on Project Indicator Geographic Area object rolls up Geographic Area Name to this field.</description>
    <label>Geographic Area</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>