force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Geographical_Disaggregation__c.field-meta.xml
<CustomField>
    <fullName>ampi__Geographical_Disaggregation__c</fullName>
    <description>Picklist field to select the geographic disaggregation level at which indicator should be reported. The value selected in this field determines the Project Indicator Geographic Area records that are generated by the Project Indicator triggers.</description>
    <label>Geographical Disaggregation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Programme</fullName>
            </value>
            <value>
                <fullName>Programme Unit</fullName>
            </value>
            <value>
                <fullName>National Management Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>