force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Guideline__c.field-meta.xml
<CustomField>
    <fullName>ampi__Guideline__c</fullName>
    <description>Long text field to specify the guidelines on how to measure this indicator.</description>
    <label>Guideline</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>