force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Guideline_Language_2__c.field-meta.xml
<CustomField>
    <fullName>ampi__Guideline_Language_2__c</fullName>
    <description>Secondary translated version of Guideline__c.</description>
    <label>Guideline Language 2</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>