force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__IATI_Description__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Description__c</fullName>
    <description>Long text area field to capture the longer, human-readable description for an indicator in an IATI Activity for IATI reporting.</description>
    <label>IATI Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>