force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__IATI_Vocabulary__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Vocabulary__c</fullName>
    <description>Picklist field to select the vocabulary used to classify an indicator for IATI reporting.</description>
    <label>IATI Vocabulary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>WHO Registry</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Sphere Handbook</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>US Foreign Assistance Framework</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>World Bank World Development Indicators</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>UN Millennium Development Goals Indicators</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>UNOCHA Humanitarian Response Indicators</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>HIV/AIDS Indicator Registry</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Harmonized Indicators for Private Sector (HIPSO)</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>UN Sustainable Development Goals (SDG) Indicators</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>Reporting Organisation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>