force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__IATI_Vocabulary_URI__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Vocabulary_URI__c</fullName>
    <description>Text field to link to the source of the vocabulary used to classify indicators for IATI reporting.</description>
    <inlineHelpText>This link will be published in the IATI Activity file and must be publicly accessible.</inlineHelpText>
    <label>IATI Vocabulary URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>