force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Indicator_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__Indicator_Code__c</fullName>
    <description>Formula field to pull the Indicator Code from the parent Catalog Indicator record onto the current Project Indicator record.</description>
    <formula>ampi__Catalog_Indicator__r.ampi__Indicator_Code__c</formula>
    <label>Indicator Code</label>
    <type>Text</type>
</CustomField>