force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Indicator_Level__c.field-meta.xml
<CustomField>
    <fullName>ampi__Indicator_Level__c</fullName>
    <description>Picklist field to specify the level project indicator is tracking i.e. whether this indicator is tracking impact or progress.</description>
    <formula>TEXT(ampi__Catalog_Indicator__r.ampi__Indicator_Level__c)</formula>
    <label>Indicator Level</label>
    <type>Text</type>
</CustomField>