force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Last_Aggregation_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__Last_Aggregation_Date__c</fullName>
    <description>Date/Time field to store the date and time of when the last aggregation batch for this Project Indicator was successfully run. This field is populated by the aggregation batch.</description>
    <inlineHelpText>Date and time when the last aggregation batch was successfully run for this Project Indicator</inlineHelpText>
    <label>Last Aggregation Date</label>
    <type>DateTime</type>
</CustomField>