force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Notes__c.field-meta.xml
<CustomField>
    <fullName>ampi__Notes__c</fullName>
    <description>Long text field to capture additional infromation related to this project indicator</description>
    <label>Notes</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>