force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Number_of_Decimals_Places_Allowed__c.field-meta.xml
<CustomField>
    <fullName>ampi__Number_of_Decimals_Places_Allowed__c</fullName>
    <description>Picklist field to determine the number of decimals displayed on STAR pages.</description>
    <inlineHelpText>Select the number of decimals data is displayed with on the Set Targets and Add Results pages.</inlineHelpText>
    <label>Number of Decimal Places Allowed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>