force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Objective__c.field-meta.xml
<CustomField>
    <fullName>ampi__Objective__c</fullName>
    <description>Long text field to store the comma-separated objectives related to this project indicator. This field is populated by the triggers on Project Indicator Objective.</description>
    <label>Objective(s)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>