force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Objective_Language_2__c.field-meta.xml
<CustomField>
    <fullName>ampi__Objective_Language_2__c</fullName>
    <description>Secondary translated version of Objective__c.</description>
    <label>Objective(s) Language 2</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>