force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Project__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Project this project indicator belongs to.</description>
    <label>Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Project Indicators</relationshipLabel>
    <relationshipName>Project_Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>