force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Red_Yellow_Threshold__c.field-meta.xml
<CustomField>
    <fullName>ampi__Red_Yellow_Threshold__c</fullName>
    <defaultValue>0.75</defaultValue>
    <description>A default value for this field can be set by the organisation via Process Builder and the help text can be updated accordingly. The value in this field determines when the Red stoplight turns to Yellow on AddResults.</description>
    <inlineHelpText>The percent of this indicator&apos;s target value that the result value must meet or surpass in order for the stoplight to turn from red to yellow.</inlineHelpText>
    <label>% Threshold Between Red and Yellow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>