force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Related_Indicator__c.field-meta.xml
<CustomField>
    <fullName>ampi__Related_Indicator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the related project indicator to create a hierarchy of Project Indicators.</description>
    <label>Related Project Indicator</label>
    <referenceTo>ampi__Project_Indicator__c</referenceTo>
    <relationshipLabel>Project Indicators</relationshipLabel>
    <relationshipName>Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>