force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Reporting_Currency__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reporting_Currency__c</fullName>
    <description>This formula field copies the reporting currency from parent indicator.</description>
    <formula>TEXT( ampi__Catalog_Indicator__r.ampi__Reporting_Currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Currency</label>
    <type>Text</type>
</CustomField>