force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Reporting_Period_Text__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reporting_Period_Text__c</fullName>
    <description>Concatenated list of all Reporting Period records that are associated with a Project Indicator, via the Project Indicator Reporting Period junction records. The trigger on the Project Indicator Reporting Period object rolls up Reporting Period Name to this field.</description>
    <label>Reporting Period</label>
    <length>7500</length>
    <type>LongTextArea</type>
</CustomField>