force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Reporting_Period_Text_Language_1__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reporting_Period_Text_Language_1__c</fullName>
    <description>Primary translated version of Reporting_Period_Text.</description>
    <label>Reporting Period Language 1</label>
    <length>7500</length>
    <type>LongTextArea</type>
</CustomField>