force-app/main/default/objects/ampi__Project_Indicator__c/fields/ampi__Reporting_Period_Text_Language_2__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reporting_Period_Text_Language_2__c</fullName>
    <description>Secondary translated version of Reporting_Period_Text.</description>
    <label>Reporting Period Language 2</label>
    <length>7500</length>
    <type>LongTextArea</type>
</CustomField>